--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "eslint": "8.22.0",
         "eslint-plugin-standard": "^4.1.0",
         "eslint-plugin-vue": "^9.5.1",
+        "gh-pages": "^5.0.0",
         "jsdom": "^21.0.0",
         "pinia": "^2.1.4",
         "sass": "^1.55.0",
